[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Fire.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/kisspng-hot-air-balloon-cartoon-free-content-clip-art-hot-angel-cliparts-5aae2d7c55dbc1.6716745915213643483517-removebg.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/546151__tosha73__gas-combustion.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/art/06809_00.png" type="Texture" id=4]
[ext_resource path="res://scenes/Balloon.gd" type="Script" id=5]
[ext_resource path="res://assets/sound/274119__trollox-78__hit-someting.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/563197__lukeo135__balloon-pop.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 295.821
height = 98.7586

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 51.8574

[node name="Balloon" type="Area2D"]
position = Vector2( 682, 760 )
scale = Vector2( 0.42, 0.42 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
can_burn = true
can_move = true

[node name="BurningAnimation" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="BurningAnimation" instance=ExtResource( 1 )]
position = Vector2( -11.8281, -178.683 )

[node name="Fire2" parent="BurningAnimation" instance=ExtResource( 1 )]
position = Vector2( 10.8223, -177.311 )
frame = 0

[node name="BalloonSprite" type="Sprite" parent="."]
position = Vector2( -13, -504 )
texture = ExtResource( 2 )

[node name="PuncturedSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 199, -817 )
rotation = -0.543678
scale = Vector2( 0.339926, 0.601897 )
texture = ExtResource( 4 )

[node name="BalloonCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -17.8461, -701.574 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="MiddleCollisionShape" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -300 )
polygon = PoolVector2Array( -277.069, -191.384, 237.347, -190.134, 70, 40, 45, 120, 45, 280, -45, 280, -45, 120, -75, 40 )

[node name="BasketCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Audio" type="Node2D" parent="."]

[node name="BurningAudioPlayer" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( 0, -145 )
stream = ExtResource( 3 )
attenuation = 0.933033

[node name="PuncturedAudioPlayer" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( 190.815, -844.427 )
stream = ExtResource( 7 )
volume_db = -5.0
attenuation = 0.0291573

[node name="CrashedAudioPlayer" type="AudioStreamPlayer2D" parent="Audio"]
pause_mode = 2
position = Vector2( 43.703, -39.4734 )
stream = ExtResource( 6 )
volume_db = -4.0
attenuation = 0.0291573
[connection signal="body_entered" from="." to="." method="_on_Balloon_body_entered"]
